Mover el polo y calculo de r punto y theta punto, r dos puntos y theta dos puntos.
